fix: align card in the center

--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ CSS RESET
 
 body {
 	font-family: var(--ff-sans);
+	height: 100vh;
 }
 
 img {
@@ -74,6 +75,7 @@ LAYOUT
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	height: 100%;
 }
 
 /* 
